error.log
> feedeliza-plus@1.0.0 start
> node server.js
✅ Conexão com banco de dados estabelecida
❌ Erro ao iniciar servidor: /app/src/domains/dashboard/dashboard.controller.js:18
const getDashboardOverview = async (req, res, next) => {
      ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Unexpected identifier 'getDashboardOverview'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at module.exports (/app/src/domains/dashboard/dashboard.routes.js:7:33)
    at module.exports (/app/routes/index.js:26:54)
    at startServer (/app/server.js:78:21)